<resources>
    <string name="app_name">Dados2023</string>
    <string name="text_button_play">Jugar una partida</string>
    <string name="text_label_j1">Jugador 1</string>
    <string name="text_label_j2">Jugador 2</string>
    <string name="text_label_j1d1">Dado 1</string>
    <string name="text_label_j1d2">Dado 2</string>
    <string name="text_label_j2d1">Dado 1</string>
    <string name="text_label_j2d2">Dado 2</string>
    <string name="text_label_resultado">Ha ganado el jugador: </string>


</resources>